# lumos

./: README.md  erp_scaffolder.py  pyproject.toml
erp/: __init__.py  app.py
erp/core/: erp_system.py
erp/domain/: erp_modules.py
erp/use_cases/: process_operation.py
integration_tests/: test_api.py
tests/: conftest.py  test_core.py  test_domain.py
